2010-08-23  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alert/alert_list.php, godmode/alert/alert_list.list.php:
	Added 'Enabled/Disabled' selection to alert filter.

2010-08-23  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alert/alert_compounds.php: Fixed the problem alert compounds
	settings in step3 can not be saved.

2010-08-20  Sergio Martin <sergio.martin@artica.es>

	* include/styles/menu.css
	godmode/massive/massive_operations.php: Fixed 
	the massive operations header new message and
	added style to the menu image to massive operations

2010-08-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/massive_copy_modules.php
	godmode/agentes/massive_add_alerts.php
	godmode/agentes/massive_delete_agents.php
	godmode/agentes/massive_delete_action_alerts.php
	godmode/agentes/massive_delete_alerts.php
	godmode/agentes/massive_edit_modules.php
	godmode/agentes/massive_operations.php
	godmode/agentes/massive_delete_modules.php
	godmode/agentes/massive_add_action_alerts.php
	godmode/menu.php
	godmode/massive
	godmode/massive/massive_copy_modules.php
	godmode/massive/massive_add_alerts.php
	godmode/massive/massive_delete_agents.php
	godmode/massive/massive_operations.php
	godmode/massive/massive_delete_action_alerts.php
	godmode/massive/massive_delete_modules.php
	godmode/massive/massive_delete_alerts.php
	godmode/massive/massive_edit_modules.php
	godmode/massive/massive_add_action_alerts.php: Created
	a new section for massive operations and change the 
	structure of the files to new folder

2010-08-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php
	godmode/agentes/module_manager_editor_network.php
	godmode/agentes/module_manager_editor_wmi.php
	godmode/agentes/module_manager_editor_plugin.php
	godmode/agentes/module_manager_editor_prediction.php
	godmode/agentes/module_manager_editor.php: Added the policy linkation
	configuration in the modules form and allowed to modify modules