@@ -1,3 +1,9 @@
+2010-08-23  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_reporting.php
+	include/fgraph.php: Fixed the max and min values 
+	on the graphs
+
 2010-08-23  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/alert/alert_list.php, godmode/alert/alert_list.list.php:
